--- a/M1U2/index.html
+++ b/M1U2/index.html
@@ -21,11 +21,13 @@
     </h6>
     <p>Lorem su informacion  <a href="https://es.lipsum.com/"target="_blank">aqui</a></p>    
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat praesentium sed rerum nisi sit repellendus sequi officia necessitatibus tenetur reiciendis, inventore dolor libero eum architecto a accusamus ea dolores consequatur?</p>
+    <h3>Esto es una lista Desordenada</h3>
     <ul>
         <li>item1</li>
         <li>item2</li>
         <li>item3</li>
     </ul>
+    <h3>Esto es una lista Ordenada</h3>
     <ol>
         <li>item1</li>
         <li>item2</li>
@@ -34,13 +36,47 @@
     <h3>Ejempro de etiqueta img</h3>
     <img src="mesa.jpg" alt="mesa">
     <img src="img/mesa2.jpg" alt="mesa">
+    <svg width="100" height="100">
+        <circle cx="50" cy="50" r="40" stroke="blue" stroke-width="4" fill="red"/>
+    </svg>
+    <div>
+        <h2>Historia</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non a tempora ut inventore dolores, facilis atque officia praesentium alias, dolore natus, nobis impedit obcaecati omnis ratione! Deleniti quis reiciendis sint!
+        </p>
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur molestias dignissimos modi assumenda nisi amet exercitationem eius. Veritatis, hic! Repellat illum dicta excepturi vitae voluptas voluptates ullam. Eius, commodi asperiores?</p>
+    </div>
+    <audio src="musica1.mp3" controls></audio>
+
     <form action="" method="">
         <p>
-        <label for="">
-            Nombre        
-        </label>
-        <input type="text">
-        <input type="password">
+        <label for="">Nombre</label>
+        <input type="text" name="Nombre" required="">
+        <label for="">Telefono</label>
+        <input type="number"required="">
+        <input type="password"required="">
+        <input type="email"required="">
+        <input type="color">
+        <input type="checkbox">
+        <input type="range" min="1" max="10">
+        <input type="date">
+        <input type="time">
+        <input type="button" value="Enviar formulario">
+        <input type="submit">
+        <label for="">formulario de completado</label>
+        <label for="sexo">sexo</label>
+            <ul>
+                <li>
+                    <input type="radio" name="sexo" value="hombre">
+                    <label>Hombre</label>
+                </ii>
+                <li>
+                    <input type="radio" name="sexo" value="mujer">
+                    <label>Mujer</label>
+                </ii>
+            </ul>
+
+
         </p>
         
     </form>
